GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Status__c</fullName>
    <label>Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Acknowledged</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
            <value>
                <fullName>Email Acknowledgment Now</fullName>
            </value>
            <value>
                <fullName>Email Acknowledgment Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>