GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AmericanExpress</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Diners</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>