GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Donor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Donor_Notes__c</fullName>
    <label>Donor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>