GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>npsp__Donation_Date__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>