GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Honoree_Contact__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Honoree Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPSP Data Imports (Honoree Contact)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>