GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Honoree_Name__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Name__c</fullName>
    <label>Honoree Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>