GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Matching_Gift_Account__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Gift Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPSP Data Imports (Matching Gift Account)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>