GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Matching_Gift_Employer__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Employer__c</fullName>
    <label>Matching Gift Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>