GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Matching_Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Status__c</fullName>
    <label>Matching Gift Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>