GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Opportunity_Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency_ISO_Code__c</fullName>
    <label>Opportunity Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>