GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Opportunity_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>NPSP Data Imports</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>