GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Opportunity_Receivable_GAU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Receivable_GAU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Receivable GAU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>npsp__General_Accounting_Unit__c.cspb__Fund_Code_Type__c</field>
            <operation>equals</operation>
            <value>Receivables</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>NPSP Data Imports (Opportunity Receivable GAU)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>