GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <formula>IF( ISBLANK(npsp__Account1Imported__c), npsp__Contact1Imported__r.AccountId ,npsp__Account1Imported__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account</label>
    <type>Text</type>
</CustomField>