GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Payment_General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>Payment_General_Accounting_Unit__c</fullName>
    <formula>npsp__NPSP_Data_Import_Batch__r.cspb__Deposit_General_Accounting_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment General Accounting Unit</label>
    <type>Text</type>
</CustomField>