GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Payment_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Record_Type_Name__c</fullName>
    <description>The Name of the Payment Record Type to use for the donation. Uses default Record Type if left blank.</description>
    <inlineHelpText>The Name of the Payment Record Type to use for the donation. Uses default Record Type if left blank.</inlineHelpText>
    <label>Payment Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>