GiftEntry/force-app/main/default/objects/npsp__DataImport__c/fields/Tribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Type__c</fullName>
    <label>Tribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honor</fullName>
            </value>
            <value>
                <fullName>Memorial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>